--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+nav{
+  height:8vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#Navlogo{
+  width:56px;
+  height:45px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.card{
+  width:20vw;
+  margin-top: 0px;
+  transition: width 3ms;
+}
+.mg{
+  margin-top: 40px;
+}
+.card img{
+  height:28vh;
+}
+body{
+  background-color: rgb(145, 145, 145) !important;
+}
+.card:hover{
+  width:21vw;
+  box-shadow:5px 5px 7px 7px rgb(190, 190, 190);
+}
+footer{
+  height:10vh;
+}
+.cardcontainer{
+  padding-top: 34px;
+  margin-top: 0px;
+}
+@media only screen and (max-width:500px){
+  nav,footer{
+      height:12vh;
+  }
+  .card{
+      width:50vw;
+      margin-bottom: 30px;
+  }
+  .card:hover{
+      width:53vw;
+  }
+  .cardcontainer{
+      display:flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      margin-top: 180px;
+  }
+  .mg{
+    margin-top: 0;
+  }
+  .collapse{
+    padding-bottom: 25px;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (min-width:501px) and (max-width:880px){
+  nav,footer{
+      height:12vh;
   }
-  to {
-    transform: rotate(360deg);
+  .card{
+      width:50vw;
+      margin-bottom: 30px;
+  }
+  .card:hover{
+      width:53vw;
+  }
+  .cardcontainer{
+      display:flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      margin-top: 160px;
+  }
+  .mg{
+    margin-top: 0;
+  }
+  .collapse{
+    padding-bottom: 25px;
+  }
+}
+@media only screen and (min-width:881px) and (max-width:1200px){
+  nav,footer{
+      height:10vh;
   }
 }
